# chatbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.override.yaml  compose.yaml  pyproject.toml  sanitize.py
.github/workflows/: build-prod.yaml  build-staging.yaml  ci.yaml  deploy-prod.yaml  deploy-staging.yaml  test-chatbot.yaml  test-helm.yaml
alembic/: README  README.md  env.py
alembic/versions/: 091db36ec6e3_initial_migration.py  19e2c92563e2_add_model_call_limit_message_status.py  19e2c92563e2_update_message_status.py  1c6556bb74f2_initial_migration.py  560784438ac8_change_user_id_type_to_uuid.py  595ef4194a22_initial_migration.py  c0135b4524b9_use_timezone_aware_timestamps.py  f593c35b86e7_feedback_ratings_non_nullable.py  f593c35b86e7_make_ratings_non_nullable.py
app/: artifacts.py  log_config.py  logging.py  main.py  metrics.py  settings.py  storage.py
app/agent/: hooks.py  prompts.py  react_agent.py  tools.py  types.py
app/agent/tools/: __init__.py  api.py  bigquery.py  exceptions.py  models.py  queries.py
app/api/: main.py  schemas.py  streaming.py
app/api/dependencies/: __init__.py  agent.py  auth.py  db.py  feedback.py
app/api/routers/: chatbot.py
app/api/streaming/: __init__.py  agent_runner.py  schemas.py  security.py  stream.py
app/db/: database.py  models.py
charts/basedosdados-chatbot/: Chart.yaml  values.schema.json  values.yaml
charts/basedosdados-chatbot/templates/: deployment.yaml  migration.yaml  service.yaml
chatbot/: __init__.py  pyproject.toml
chatbot/agents/: __init__.py  prompts.py  react_agent.py  reducers.py  router_agent.py  sql_agent.py  structured_outputs.py  utils.py  visualization_agent.py
chatbot/assistants/: __init__.py  assistant.py  assistants.py  async_sql_assistant.py  async_sql_viz_assistant.py  datatypes.py  formatting.py  messages.py  sql_assistant.py  sql_viz_assistant.py
chatbot/chatbot/agents/: __init__.py  react_agent.py  router_agent.py  sql_agent.py  structured_outputs.py  visualization_agent.py
chatbot/chatbot/assistants/: __init__.py  assistant.py  bigquery_assistant.py  datatypes.py  sql_assistant.py  sql_viz_assistant.py
chatbot/contexts/: __init__.py  bigquery_context_provider.py  context_provider.py  metadata_formatter.py
chatbot/databases/: __init__.py  bigquery_database.py  database.py
chatbot/exceptions/: __init__.py  exceptions.py
chatbot/formatters/: __init__.py  prompt_formatter.py  sql_prompt_formatter.py  viz_prompt_formatter.py
chatbot/loguru_logging/: loguru_logging.py
chatbot/models/: __init__.py  datatypes.py  model_factory.py
chatbot/prompts/: __init__.py  router_prompts.py  sql_prompts.py  viz_prompts.py
chatbot/storage/: __init__.py  vector_database.py
chatbot/tests/: test_bigquery_assistant.py  test_model_factory.py  test_sql_assistant.py  test_sql_viz_assistant.py  test_viz_agent.py
chatbot/tools/: __init__.py  bigquery_tools.py
scripts/: migrate.sh  run-local.sh  run.sh  setup_checkpointer.py
tests/: conftest.py  test_async_sql_assistant.py  test_async_sql_viz_assistant.py  test_bigquery_context_provider.py  test_bigquery_database.py  test_formatting.py  test_react_agent.py  test_reducers.py  test_router_agent.py  test_sql_agent.py  test_sql_assistant.py  test_sql_viz_assistant.py  test_structured_outputs.py
tests/app/: test_main.py  test_storage.py
tests/app/agent/: test_tools.py
tests/app/agent/tools/: test_api.py  (+3 more)
tests/app/api/: test_streaming.py
tests/app/db/: test_database.py
(+8 files in other folders)
