[project]
name = "chatbot"
version = "0.5.1"
description = ""
authors = [
    {name = "vrtornisiello", email = "vrtornisiello@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "google-cloud-bigquery (>=3.33.0,<4.0.0)",
    "langchain (==0.3.25)",
    "langgraph (==0.4.7)",
    "langgraph-checkpoint-postgres (==2.0.21)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlparse (>=0.5.3,<0.6.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
