[project]
name = "chatbot"
version = "0.1.0"
description = "Base dos Dados chatbot API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.0",
    "fastapi[standard]>=0.123.4",
    "google-cloud-bigquery>=3.39.0",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.3",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.2",
    "langsmith>=0.6.0",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.31",
]

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.22.0",
    "ruff>=0.14.10",
    "testcontainers[postgres]>=4.10.0",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]
show_missing = true
