[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["victor.tornisiello <victor.tornisiello@basedosdados.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-bigquery = "^3.25.0"
langchain = "0.3.20"
langchain-chroma = "0.2.2"
langchain-google-vertexai = "2.0.15"
langchain-openai = "0.3.9"
langgraph = "0.3.11"
langgraph-checkpoint-postgres = "2.0.17"
loguru = "^0.7.2"
psycopg = "3.2.6"
psycopg-pool = "3.2.6"
sqlparse = "^0.5.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
